--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gooool",
   "private": false,
-  "version": "1.0.2",
+  "version": "1.0.5",
   "type": "module",
   "main": "./dist/gooool.js",
   "types": "./dist/main.d.ts",
@@ -18,5 +18,10 @@
   },
   "files": [
     "dist"
+  ],
+  "keywords": [
+    "console",
+    "typescript",
+    "log"
   ]
 }
